Address most of Null static analysis findings among Sugg. Processors
The change is nearly a functional noop, adding null annotations in all
of Omnibox Suggestion processors.

The change replaces OmniboxImageSupplier with an Optional field to
drive change towards abolishing @Nullable fields entirely.

Lastly, the change removes a few unused member fields (e.g. `Context`
in ActionChipsProcessor).

The change effectively eliminates null annotation processor findings
in most of the processors.

Change-Id: Id54250d135e17ed7bb8a88448e871946734f1f6e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5430578
Reviewed-by: Gang Wu <gangwu@chromium.org>
Commit-Queue: Tomasz Wiszkowski <ender@google.com>
Cr-Commit-Position: refs/heads/main@{#1283698}