@@ -33,15 +33,15 @@ import org.chromium.components.omnibox.AutocompleteMatch.MatchClassification;
 import org.chromium.ui.modelutil.PropertyModel;
 import org.chromium.url.GURL;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 /** A class that handles base properties and model for most suggestions. */
 public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor {
     protected final @NonNull Context mContext;
     protected final @NonNull SuggestionHost mSuggestionHost;
     private final @NonNull ActionChipsProcessor mActionChipsProcessor;
-    private final @Nullable OmniboxImageSupplier mImageSupplier;
+    private final @NonNull Optional<OmniboxImageSupplier> mImageSupplier;
     private final int mDesiredFaviconWidthPx;
     private final int mDecorationImageSizePx;
     private final int mSuggestionSizePx;
@@ -54,7 +54,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
     public BaseSuggestionViewProcessor(
             @NonNull Context context,
             @NonNull SuggestionHost host,
-            @Nullable OmniboxImageSupplier imageSupplier) {
+            @NonNull Optional<OmniboxImageSupplier> imageSupplier) {
         mContext = context;
         mSuggestionHost = host;
         mImageSupplier = imageSupplier;
@@ -67,7 +67,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
         mSuggestionSizePx =
                 mContext.getResources()
                         .getDimensionPixelSize(R.dimen.omnibox_suggestion_content_height);
-        mActionChipsProcessor = new ActionChipsProcessor(context, host);
+        mActionChipsProcessor = new ActionChipsProcessor(host);
     }
 
     /**
@@ -115,7 +115,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * @param decoration the OmniboxDrawableState to apply
      */
     protected void setOmniboxDrawableState(
-            PropertyModel model, @NonNull OmniboxDrawableState decoration) {
+            @NonNull PropertyModel model, @NonNull OmniboxDrawableState decoration) {
         model.set(BaseSuggestionViewProperties.ICON, decoration);
     }
 
@@ -125,7 +125,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * @param model Property model to update.
      * @param actions List of actions for the suggestion.
      */
-    protected void setActionButtons(PropertyModel model, List<Action> actions) {
+    protected void setActionButtons(@NonNull PropertyModel model, @Nullable List<Action> actions) {
         model.set(BaseSuggestionViewProperties.ACTION_BUTTONS, actions);
     }
 
@@ -138,7 +138,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      */
     @VisibleForTesting(otherwise = VisibleForTesting.PROTECTED)
     public void setTabSwitchOrRefineAction(
-            PropertyModel model, AutocompleteMatch suggestion, int position) {
+            @NonNull PropertyModel model, @NonNull AutocompleteMatch suggestion, int position) {
         @DrawableRes int icon;
         String iconString;
         Runnable action;
@@ -167,7 +167,7 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
         }
         setActionButtons(
                 model,
-                Arrays.asList(
+                List.of(
                         new Action(
                                 OmniboxDrawableState.forSmallIcon(mContext, icon, true),
                                 iconString,
@@ -206,7 +206,8 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
     }
 
     @Override
-    public void populateModel(AutocompleteMatch suggestion, PropertyModel model, int position) {
+    public void populateModel(
+            @NonNull AutocompleteMatch suggestion, @NonNull PropertyModel model, int position) {
         model.set(
                 BaseSuggestionViewProperties.ON_CLICK,
                 () -> onSuggestionClicked(suggestion, position));
@@ -295,17 +296,18 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * @param model Model representing current suggestion.
      * @param url Target URL the suggestion points to.
      */
-    protected void fetchSuggestionFavicon(PropertyModel model, GURL url) {
-        if (mImageSupplier == null) return;
-
-        mImageSupplier.fetchFavicon(
-                url,
-                icon -> {
-                    if (icon != null) {
-                        setOmniboxDrawableState(
-                                model, OmniboxDrawableState.forFavIcon(mContext, icon));
-                    }
-                });
+    protected void fetchSuggestionFavicon(@NonNull PropertyModel model, @NonNull GURL url) {
+        mImageSupplier.ifPresent(
+                s ->
+                        s.fetchFavicon(
+                                url,
+                                icon -> {
+                                    if (icon != null) {
+                                        setOmniboxDrawableState(
+                                                model,
+                                                OmniboxDrawableState.forFavIcon(mContext, icon));
+                                    }
+                                }));
     }
 
     /**
@@ -315,12 +317,17 @@ public abstract class BaseSuggestionViewProcessor implements SuggestionProcessor
      * @param model the PropertyModel to update with retrieved image
      * @param imageUrl the URL of the image to retrieve and decode
      */
-    protected void fetchImage(PropertyModel model, GURL imageUrl) {
-        if (mImageSupplier == null) return;
-        mImageSupplier.fetchImage(
-                imageUrl,
-                bitmap -> {
-                    setOmniboxDrawableState(model, OmniboxDrawableState.forImage(mContext, bitmap));
-                });
+    protected void fetchImage(@NonNull PropertyModel model, @NonNull GURL imageUrl) {
+        mImageSupplier.ifPresent(
+                s ->
+                        s.fetchImage(
+                                imageUrl,
+                                bitmap -> {
+                                    if (bitmap != null) {
+                                        setOmniboxDrawableState(
+                                                model,
+                                                OmniboxDrawableState.forImage(mContext, bitmap));
+                                    }
+                                }));
     }
 }
